# mtg-draft-analyzer

./: .env.example  .gitignore  METRICS_GUIDE.md  README.md  main.py  pyproject.toml
config/: scoring.yaml  set_mechanics.yaml
src/: __init__.py  cli.py  contracts.py
src/analysis/: __init__.py  card_evaluator.py  color_meta.py  trophy_analyzer.py
src/data/: __init__.py  cache.py  color_fallback.py  loader.py  scryfall.py  set_metadata.py
src/llm/: __init__.py  gemini_client.py  prompt_builder.py
src/models/: __init__.py  archetype.py  card.py  meta.py
src/report/: __init__.py  html_gen.py  json_export.py  markdown_gen.py
src/scoring/: __init__.py  calibration.py  card_scorer.py  color_scorer.py  irregularity.py
templates/: draft_guide.html.j2  guide_archetypes.html.j2  guide_base.html.j2  guide_cards.html.j2  guide_overview.html.j2  guide_special.html.j2
templates/static/: guide.css  guide.js
tests/: __init__.py  test_contracts.py
