[project]
name = "mtg-draft-analyzer"
version = "0.1.0"
description = "17lands 데이터 기반 MTG Arena 드래프트 메타 분석 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "polars>=0.20",
    "google-generativeai>=0.4",
    "jinja2>=3.1",
    "typer>=0.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
draft-analyzer = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
